--- a/package.json
+++ b/package.json
@@ -15,11 +15,18 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "fslightbox-react": "^1.7.6",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/fslightbox-react": "^1.7.3",
+    "@types/react-slick": "^0.23.10"
   }
 }
