--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next-export"
   },
   "dependencies": {
     "@types/node": "20.5.7",
@@ -15,9 +16,10 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
-    "firebase": "^10.3.1",
     "fslightbox-react": "^1.7.6",
     "next": "13.4.19",
+    "next-export-optimize-images": "^3.1.1",
+    "next-sitemap": "^4.2.2",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
